# ontorag

./: .dockerignore  .env.example  .gitignore  BENCHMARK_RESULTS.ko.md  BENCHMARK_RESULTS.md  CHANGELOG.md  LICENSE  README.ko.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: docs.yml  eval.yml  test.yml
bench_speed_results/: bench_ods.json  bench_pokemon.json  bench_pure_land.json  bench_techstack.json
bench_speed_results_v2/: bench_ods.json  bench_pokemon.json  bench_pure_land.json  bench_techstack.json
bench_speed_results_v3/: bench_ods.json  bench_pokemon.json  bench_pure_land.json  bench_techstack.json
docker/api/: Dockerfile
docker/fuseki/: config-inference.ttl.template  config.ttl
docs/: BENCHMARK_v1.2.md  BENCHMARK_v1.md  architecture.ko.md  architecture.md  benchmark.ko.md  benchmark.md  changelog.ko.md  changelog.md  cli.ko.md  cli.md  index.ko.md  index.md  installation.ko.md  installation.md  learning.ko.md  learning.md  mcp.ko.md  mcp.md  quickstart.ko.md  quickstart.md  reasoning.ko.md  reasoning.md  webui.ko.md  webui.md
docs/design/: bayesian-layer.md  causal-layer.md  directory-loader.md  falkordb.md  fuseki-parity.md  layered-ontology-plan.md  multi-ontology.md  named-graph-layers.md  neo4j-bm25.md  neo4j-embedding.md  neo4j-n10s.md  sparql-approach.md
docs/portfolio/: neo4j-evolution.ko.md  neo4j-evolution.md
examples/agent_memory/: lifecycle.py  normalizer.py
examples/commerce/: README.md  data.ttl  goldset.jsonl  sample_report.md  schema.ttl  shapes.ttl
examples/commerce/bench_results/: comparison.md  langchain_real.json  ontorag_mock.json  ontorag_native.json  ontorag_native_v7.json  ontorag_native_vs_langchain.md  ontorag_vs_langchain_real.md  vector_rag_mock.json
examples/ods/: README.md  data.ttl  goldset.jsonl  schema.ttl  shapes.ttl
examples/ods/bench_results/: langchain_gpt4o.json  langchain_real.json  ontorag_native.json  ontorag_native_gpt4o.json  ontorag_native_vs_langchain.md
examples/pokemon/: README.md  bayes-network.ttl  bayes-structure.ttl  data.ttl  goldset.jsonl  goldset_multihop.jsonl  goldset_semantic.jsonl  schema.ttl  shapes.ttl
examples/pokemon/bench_results/: langchain_gpt4o.json  ontorag_native_gpt4o.json
examples/pure_land/: README.md  cross_check_report.md  data.ttl  goldset.jsonl  sample_report.md  schema.ttl  shapes.ttl
examples/pure_land/bench_results/: comparison.md  langchain_gpt4o.json  langchain_real.json  ontorag_mock.json  ontorag_native.json  ontorag_native_gpt4o.json  ontorag_native_v3.json  ontorag_native_v4.json  ontorag_native_v5.json  ontorag_native_v6.json  ontorag_native_v7.json  ontorag_native_v7_vs_langchain.md  ontorag_native_v8_gpt4o.json  ontorag_native_vs_langchain.md  ontorag_vs_langchain_real.md  vector_rag_mock.json
examples/smoking/: bayes-network.ttl  causal-model.ttl  reasoning_goldset.jsonl
examples/techstack/: README.md  corpus.txt  data.ttl  goldset.jsonl  schema.ttl  shapes.ttl
examples/techstack/bench_results/: langchain_gpt4o.json  ontorag_native_gpt4o.json
results/ablation/: v1.2router_v1.2.1eval.json
results/v1.2/: ontorag_multiagent_multihop.json  ontorag_native_multihop.json
results/v1.2-quote-anchored/: ontorag_multiagent_multihop.json
results/v1.2.1/: ontorag_multiagent_multihop.json
results/v1.2.2/: ontorag_multiagent_multihop.json
scripts/: bench_query_speed.py  bench_query_speed_4domain.py  bench_ragas_4domain.sh  compare_ragas_v0_4_0_vs_v3.py  gen_screenshots.py
src/ontorag/: _prompts.py  cli.py  cli_bayes.py  cli_causal.py  cli_eval.py  cli_learn.py  mcp_stdio.py
src/ontorag/_templates/: docker-compose.yml  env.example
src/ontorag/api/: deps.py  main.py
src/ontorag/api/routes/: chat.py  dump.py  health.py  load.py  (+1 more)
src/ontorag/bayes/: __init__.py  engine.py  learn.py
src/ontorag/causal/: __init__.py  discovery.py  engine.py
src/ontorag/chat/: agent.py  selector.py  store.py
src/ontorag/core/: access.py  batch_loader.py  bayes.py  causal.py  config.py  cypher.py  fastrp.py  loader.py  manifest.py  ontology.py  sparql.py
src/ontorag/eval/: __init__.py  goldset.py  orchestrator.py  reasoning_goldset.py  report.py
src/ontorag/learn/: __init__.py  _utils.py  base.py  column_mapper.py  pipeline.py  relation.py  shacl.py  structured_reader.py  taxonomy.py  term_typing.py
src/ontorag/llm/: anthropic.py  base.py  embedding.py  factory.py  ollama.py  openai.py
src/ontorag/stores/: _entity_mixin.py  _falkordb_embedding_mixin.py  _falkordb_search_mixin.py  _fuseki_bayes_mixin.py  _fuseki_causal_mixin.py  _fuseki_embedding_mixin.py  _fuseki_search_mixin.py  _neo4j_bayes_mixin.py  _neo4j_causal_mixin.py  _neo4j_embedding_mixin.py  _neo4j_entity_mixin.py  _neo4j_export.py  _neo4j_schema_mixin.py  _neo4j_scope.py  _neo4j_search_mixin.py  _neo4j_traversal_mixin.py  _neo4j_values.py  _qdrant.py  _traversal_mixin.py  access_wrapper.py  base.py  factory.py  falkordb.py  fuseki.py  neo4j.py
src/ontorag/web/: router.py
tests/: conftest.py  test_access.py  test_agent_loop.py  test_base_models.py  test_batch_loader.py  test_bayes_engine.py  test_bayes_learn.py  test_bayes_routes.py  test_bayes_vocab.py  test_causal_discovery.py  test_causal_engine.py  test_causal_vocab.py  test_cli.py  test_cli_eval.py  test_cli_learn.py  test_dump.py  test_embedding_ontology_integration.py  test_embedding_ontology_scope.py  test_embedding_provider.py  test_entity_tools.py  test_eval_baselines.py  test_eval_goldset.py  test_eval_metrics.py  test_eval_orchestrator.py  test_eval_ragas_wrapper.py  test_eval_report.py  test_eval_sparql_eq.py  test_exception_handler.py  test_falkordb_integration.py  test_fastrp.py  test_fuseki.py  test_fuseki_bayes_integration.py  test_fuseki_causal_integration.py  test_fuseki_embedding.py  test_fuseki_integration.py  test_fuseki_search.py  test_fuseki_vector_integration.py  test_health.py  test_inverse_of.py  test_learn_column_mapper.py  (+41 more)
tests/fixtures/: inverse_of_data.ttl  inverse_of_schema.ttl  sameas_data.ttl  sameas_schema.ttl
(+54 files in other folders)
