[project]
name = "ontorag"
version = "0.1.0"
description = "Ontology-aware RAG framework. Ontology as the source of truth."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "fastapi-mcp>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.12.0",
    "rdflib>=7.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ontorag = "ontorag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/ontorag"]
artifacts = [
    "src/ontorag/_templates/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
