[project]
name = "ontorag"
version = "0.3.2"
description = "Ontology-aware RAG framework. Ontology as the source of truth."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Jaeho Kang", email = "greennuri@gmail.com" }]
maintainers = [{ name = "Jaeho Kang", email = "greennuri@gmail.com" }]
keywords = [
    "rag",
    "ontology",
    "owl",
    "rdf",
    "sparql",
    "mcp",
    "llm",
    "knowledge-graph",
    "fuseki",
    "llms4ol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "fastapi-mcp>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.12.0",
    "rdflib>=7.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "pyshacl>=0.25.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
bench = [
    # External baselines + LLM-as-judge metrics for Phase B comparison.
    # Optional — install only when running `ontorag eval` against
    # non-ontorag baselines OR computing RAGAS metrics. Requires
    # OPENAI_API_KEY at runtime.
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "ragas>=0.2.0",
    "datasets>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nuri428/ontorag"
Repository = "https://github.com/nuri428/ontorag"
Issues = "https://github.com/nuri428/ontorag/issues"
Changelog = "https://github.com/nuri428/ontorag/blob/main/CHANGELOG.md"

[project.scripts]
ontorag = "ontorag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/ontorag"]
artifacts = [
    "src/ontorag/_templates/**",
    "src/ontorag/web/templates/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=9.0.3",
]
