[project]
name = "ontorag"
version = "0.9.1"
description = "Ontology-aware RAG framework. Ontology as the source of truth."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Jaeho Kang", email = "greennuri@gmail.com" }]
maintainers = [{ name = "Jaeho Kang", email = "greennuri@gmail.com" }]
keywords = [
    "rag",
    "ontology",
    "owl",
    "rdf",
    "sparql",
    "mcp",
    "llm",
    "knowledge-graph",
    "fuseki",
    "llms4ol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "fastapi-mcp>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.12.0",
    "rdflib>=7.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "pyshacl>=0.25.0",
    "openpyxl>=3.1.0",
    "neo4j>=5.14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
bench = [
    # External baselines + LLM-as-judge metrics for Phase B comparison.
    # Optional — install only when running `ontorag eval` against
    # non-ontorag baselines OR computing RAGAS metrics. Requires
    # OPENAI_API_KEY at runtime.
    #
    # Upper bounds are REQUIRED: ragas>=0.4 imports
    # `langchain_community.chat_models.vertexai` (removed in the langchain 1.x
    # ecosystem), so loose pins resolve to ragas 0.4.x + langchain 1.x — a combo
    # that fails at `import ragas`. Pinned to the verified-working 0.3-era
    # langchain + ragas 0.2.x line (ragas 0.2.15 + langchain 0.3.30 confirmed).
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-chroma>=0.1,<0.2",
    "chromadb>=0.5,<0.6",
    "ragas>=0.2,<0.3",
    "datasets>=2,<4",
]
neo4j = [
    # Neo4j + neosemantics (n10s) backend — install only when running with
    # GRAPH_STORE=neo4j. The fuseki default needs none of this. The async
    # driver lives in neo4j>=5 (neo4j.AsyncGraphDatabase).
    "neo4j>=5.14.0",
]
vector = [
    # Qdrant vector store — used by the Fuseki backend for find_similar /
    # build_embeddings. Install when GRAPH_STORE=fuseki and you want
    # structural / textual / hybrid similarity search.
    "qdrant-client>=1.9.0,<1.10.0",
]
falkordb = [
    # FalkorDB backend (v0.9) — Cypher-compatible, GraphBLAS-accelerated graph
    # store. Install only when running with GRAPH_STORE=falkordb. The async
    # client lives in falkordb.asyncio (built on redis.asyncio).
    "falkordb>=1.0.0",
]
bayes = [
    # Probabilistic layer (v0.7) — pgmpy powers compute_posterior / mpe and
    # CPT learning (ontorag bayes learn-cpt). Python-native, MIT; pulls
    # numpy/scipy/scikit-learn/statsmodels. Install only when using the
    # Bayesian tools — the core graph/RAG functionality needs none of it.
    "pgmpy>=1.0",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/nuri428/ontorag"
Repository = "https://github.com/nuri428/ontorag"
Issues = "https://github.com/nuri428/ontorag/issues"
Changelog = "https://github.com/nuri428/ontorag/blob/main/CHANGELOG.md"

[project.scripts]
ontorag = "ontorag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/ontorag"]
artifacts = [
    "src/ontorag/_templates/**",
    "src/ontorag/web/templates/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live backend (e.g. Neo4j on bolt://localhost:7687); deselect with -m 'not integration'",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "qdrant-client>=1.9.0,<1.10.0",
]
